--- a/package.json
+++ b/package.json
@@ -9,16 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@types/swiper": "^6.0.0",
+    "adhan": "^4.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "countries-and-timezones": "^3.7.2",
+    "date-fns-tz": "^3.2.0",
+    "framer-motion": "^11.15.0",
+    "geolib": "^3.3.4",
+    "lucide-react": "^0.469.0",
+    "moment-hijri": "^3.0.0",
+    "next": "15.1.3",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-islamic-prayer-times": "^1.0.20",
+    "react-prayer-times": "^0.0.1",
+    "react-swipeable": "^7.0.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/moment-hijri": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
