--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -26,6 +27,7 @@
     "moment-hijri": "^3.0.0",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
+    "praytimes": "^0.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-islamic-prayer-times": "^1.0.20",
