--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-islamic-prayer-times": "^1.0.20",
+    "react-loading-skeleton": "^3.5.0",
     "react-prayer-times": "^0.0.1",
     "react-swipeable": "^7.0.2",
     "tailwind-merge": "^2.6.0",
