--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@types/swiper": "^6.0.0",
     "adhan": "^4.4.3",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "countries-and-timezones": "^3.7.2",
