--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@types/swiper": "^6.0.0",
+    "@windmill/react-ui": "^0.6.0",
     "adhan": "^4.4.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +37,7 @@
     "react-islamic-prayer-times": "^1.0.20",
     "react-loading-skeleton": "^3.5.0",
     "react-prayer-times": "^0.0.1",
+    "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -44,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
