--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "geolib": "^3.3.4",
     "lucide-react": "^0.469.0",
     "moment-hijri": "^3.0.0",
+    "moment-timezone": "^0.5.46",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
     "praytimes": "^0.0.5",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/moment-hijri": "^2.1.4",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
