--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-prayer-times": "^0.0.1",
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
+    "react-world-flags": "^1.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "wft-geodb-js-client": "^2.0.3"
@@ -51,6 +52,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
+    "@types/react-world-flags": "^1.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
