--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-islamic-prayer-times": "^1.0.20",
     "react-loading-skeleton": "^3.5.0",
     "react-prayer-times": "^0.0.1",
