--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "countries-and-timezones": "^3.7.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.15.0",
+    "i18next": "^24.2.2",
     "lucide-react": "^0.469.0",
     "moment-hijri": "^3.0.0",
     "next": "15.1.3",
+    "next-i18next": "^15.4.1",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-intl": "^7.1.5",
     "react-islamic-prayer-times": "^1.0.20",
     "react-world-flags": "^1.6.0",
     "tailwind-merge": "^2.6.0",
