--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@types/swiper": "^6.0.0",
     "adhan": "^4.4.3",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "countries-and-timezones": "^3.7.2",
@@ -31,24 +32,31 @@
     "next": "15.1.3",
     "next-i18next": "^15.4.1",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-intl": "^7.1.5",
     "react-islamic-prayer-times": "^1.0.20",
+    "react-toastify": "^11.0.5",
     "react-world-flags": "^1.6.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "wft-geodb-js-client": "^2.0.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/moment-hijri": "^2.1.4",
     "@types/moment-timezone": "^0.5.30",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-slick": "^0.23.13",
     "@types/react-world-flags": "^1.6.0",
     "postcss": "^8",
