--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@types/swiper": "^6.0.0",
     "adhan": "^4.4.3",
@@ -27,6 +29,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.15.0",
     "i18next": "^24.2.2",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "moment-hijri": "^3.0.0",
     "next": "15.1.3",
