--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "countries-and-timezones": "^3.7.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "i18next": "^24.2.2",
     "input-otp": "^1.4.2",
