--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,29 @@
-name: Deploy Dynamic Next.js App via FTP
-
-on:
+on: 
   push:
     branches:
-      - main
-
+      -main
+name: 🚀 Deploy website on push
 jobs:
-  build-and-deploy:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Next.js app
-        run: npm run build
-
-      - name: Cleanup files (optional)
-        run: |
-          rm -rf node_modules
-          rm -rf .git
-          rm -rf .github
-
-      - name: FTP Upload - Entire App (for dynamic hosting)
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
+    - name: Use Node.js 20
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+      
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          port: 21
-          server-dir: /home/teckezxd/globalsalah.com/
-          local-dir: ./
-
-      - name: Trigger Node.js App Restart
-        run: curl https://globalsalah.com/restart.php
